crates/parse/src/tests/snapshots/array_index_bad_2.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- "x[]"
- Err:
    - message: "Expecting primary expression. Got `CloseBracket`"
      line: 1
      column: 3
- "Expecting primary expression. Got `CloseBracket` at 1:3"

