crates/parse/src/tests/snapshots/array_index_bad_3.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- "x[0"
- Err:
    - message: "Expecting `]` after expression in index. Got `EOF`"
      line: 0
      column: 0
- "Expecting `]` after expression in index. Got `EOF`"

