crates/parse/src/tests/snapshots/array_type.snap
---
source: crates/parse/src/tests.rs
assertion_line: 293
expression: "(test[1], ast, ast_string)"
---
- "let x: [int; 3]"
- Ok:
    nodes:
      - kind:
          Let:
            name: x
            antn:
              SArray:
                - Int32
                - 3
            init: ~
- "(let x:sarray(int32, 3))"

