crates/parse/src/tests/snapshots/binop_bad_1.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- 20 -
- Err:
    - message: Premature end of expression
      line: 0
      column: 0
- Premature end of expression

