crates/parse/src/tests/snapshots/binop_bad_2.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- 20 - else
- Err:
    - message: "Expecting primary expression. Got `Else`"
      line: 1
      column: 6
- "Expecting primary expression. Got `Else` at 1:6"

